@@ -1,7 +1,6 @@
 [buildout]
 develop = .
 parts = test interpreter
-index = http://download.zope.org/zope3.4
 
 [test]
 recipe = zc.recipe.testrunner
